# yofardev_toolbox

./: README.md  SCRIPT_DOCUMENTATION.md  main.py  pyproject.toml
config/: __init__.py  app_config.py  llm_config.py  themes.py
core/: __init__.py  file_handler.py  llm_generator.py  llm_script_editor.py  script_executor.py  script_manager.py  script_version_manager.py
scripts/: animated_webp_creator.py  anime_enhancer.py  comparison_gif.py  downscale_by_half.py  downscale_to_size.py  gif_to_webp.py  image_resizer_fixed_size.py  images_to_boomerang_webp.py  images_to_gif.py  m4a_to_mp3_converter.py  manga_style_script.py  mp4_to_mp3_converter.py  pdf_to_images.py  reduce_jpeg_artifacts.py  remove_bg.py  rounded_corners.py  vibrance_saturation.py  video_to_animated_webp.py  video_to_images.py  video_to_images_benchmark.py  webcamify.py
ui/: __init__.py  app.py  main.py.backup
ui/components/: __init__.py  console.py  generator_panel.py  sidebar.py
ui/dialogs/: __init__.py  examples_dialog.py  script_editor_dialog.py  settings_dialog.py
